--- a/writeup_2.Rmd
+++ b/writeup_2.Rmd
@@ -126,7 +126,7 @@ babynames %>%
              color = "navy",
              data = bw_baby,
              size = 1
-             ) 
+             ) + 
   labs(title = "Bewitched", subtitle = "Bewitched began airing in 1964, Tabitha was born in 1966", y = "babies")
 
 ggsave("bewitched.png")
@@ -160,72 +160,61 @@ ggsave("twilight.png")
 
 # # Harry Potter
 
-# Book 1 
+
+# Names First Apear
 
 ```{r}
-#Book/Movie one
 
-hp1_yrs <- data.frame(
+newhp <- c("Draco", "Hermione", "Sirius", "Bellatrix", "Severus")
+
+bookyears <- c(1997, 1997, 1999, 2003, 2007)
+
+movieyears <- c(2001, 2001, 2004, 2007, 2011)
+
+hp_new_book <- data.frame(
   
-  release = c("Book Release", "Movie Release"),
+  name = newhp,
   
-  yr = c(1997, 2001)
+  year = bookyears,
   
+  release = c("Book 1", "Book 1", "Book 3", "Book 5", "Book 7")
 )
 
-book1names <- c("Harry", "Ron", "Hermione", "Neville", "Minerva", "Draco")
+hp_new_movie <- data.frame(
+  
+  name = newhp,
+  
+  year = movieyears,
+  
+  release = c("Movie 1", "Movie 1", "Movie 3", "Movie 5", "Movie 8")
+)
+
+
 
 babynames %>%
-  filter(name %in% book1names) %>%
-  filter(year>=1990) %>%
+  filter(name %in% newhp) %>%
+  filter(year>=1980) %>%
   ggplot() +
   geom_point(mapping = aes( x = year, y = n)) + 
   facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = yr, color = release),
+  geom_vline(aes(xintercept = year, color = release),
              linetype="dashed",
-             data = hp1_yrs, 
+             data = hp_new_book, 
              size = 1) + 
-  labs(title = "Harry Potter and the Sorcerer's Stone", subtitle = "Harry, Ron, Hermione, Neville, and Minerva McGonnagall are all introduced", y="babies")
-
-ggsave("hp1.png")
-
-
-
-```
-# Book 3
-```{r}
-#Hp 3
-hp3_yrs <- data.frame(
   
-  release = c("Book Release", "Movie Release"),
-  
-  yr = c(1999, 2004)
-  
-)
-
-book3names <- c("Sirius")
-
-babynames %>%
-  filter(name %in% book3names) %>%
-  filter(year>=1990) %>%
-  ggplot() +
-  geom_point(mapping = aes( x = year, y = n)) + 
-  facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = yr, color = release),
+  geom_vline(aes(xintercept = year, color = release),
              linetype="dashed",
-             data = hp3_yrs, 
-             size = 1) + 
-  labs(title = "Harry Potter and the Prisoner of Azkaban", subtitle = "Sirius Black is introduced", y= "babies")
-ggsave("hp3.png")
-
-
+             data = hp_new_movie, 
+             size = 1) +
+  
+  labs(title = "Names Introduced by Harry Potter", subtitle = "First appearence or major character revelation (Snape)")
 
 ```
 
-#Book 5 
+# Luna
 
 ```{r}
-#hp 5 
+
 hp5_yrs <- data.frame(
   
   release = c("Book Release", "Movie Release"),
@@ -234,7 +223,7 @@ hp5_yrs <- data.frame(
   
 )
 
-book5names <- c("Ginny", "Bellatrix", "Luna")
+book5names <- c("Luna")
 
 babynames %>%
   filter(name %in% book5names) %>%
@@ -244,42 +233,10 @@ babynames %>%
   facet_wrap(~name, scales = "free_y") + 
   geom_vline(aes(xintercept = yr, color = release),
              linetype="dashed",
-             data = hp3_yrs, 
+             data = hp5_yrs, 
              size = 1) + 
-  labs(title = "Harry Potter and the Order of the Phoenix", subtitle = "Luna and Bellatrix are introduced, Ginny takes on a prominent role", y = "babies")
+  labs(title = "Luna Lovegood: Making 'Nerdy' Cool Since 2003", subtitle = "Luna Lovegood is first featured in the fifth book (2003) / movie (2007)", y = "babies")
 
-ggsave("hp5.png")
-
-#number of # in outer markdown creates heriarchy for headings
-```
-
-# Book 7
-
-```{r}
-
-hp7_yrs <- data.frame(
-  
-  release = c("Book Release", "Movie Release"),
-  
-  yr = c(2007, 2011)
-  
-)
-
-book7names <- c("Severus")
-
-babynames %>%
-  filter(name %in% book7names) %>%
-  filter(year>=1990) %>%
-  ggplot() +
-  geom_point(mapping = aes( x = year, y = n)) + 
-  facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = yr, color = release),
-             linetype="dashed",
-             data = hp7_yrs, 
-             size = 1) + 
-  labs(title = "Harry Potter and the Deathly Hallows", subtitle = "Severus Snape turns out to be good", y = "babies")
-
-ggsave("hp7.png")
 
 ```
 
@@ -361,7 +318,12 @@ babynames %>%
   filter(name %in% c("Chloe", "Khloe")) %>%
   filter(year>=1990, sex == "F") %>% 
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = name))
+  geom_point(mapping = aes( x=year, y = n, color = name)) + 
+  facet_wrap(~name, scales = "free_y") +  geom_vline(aes(xintercept = 2007),
+             linetype = "dashed",
+             color = "red",
+             size = 1)
+  
 
 ggsave("CKhloe.png")
 
@@ -370,7 +332,11 @@ babynames %>%
   filter(name %in% c("Courtney", "Kourtney")) %>%
   filter(year>=1990, sex=="F") %>% 
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = name))
+  geom_point(mapping = aes( x=year, y = n, color = name)) + 
+  facet_wrap(~name, scales = "free_y") +  geom_vline(aes(xintercept = 2007),
+             linetype = "dashed",
+             color = "red",
+             size = 1)
 
 ggsave("CKourtney.png")
 
@@ -412,22 +378,20 @@ winslet <- data.frame (
   
   name = c("Kate","Kate", "Sabrina"),
   year = c(1997, 1995, 1996)
-)
+) #To be hihglighted later
+
+
 babynames %>%
-  filter(name %in% c("Farrah", "Kate", "Jaclyn", "Charlie", "Sabrina", "Jill", "Kelly", "Jacqueline")) %>%
-  filter(year>=1950) %>%
+  filter(name %in% c("Farrah", "Kate", "Jaclyn", "Sabrina", "Jill", "Kelly")) %>%
+  filter(year>=1950, sex == "F") %>%
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  geom_point(mapping = aes( x=year, y = n)) + 
   facet_wrap(~name, scales = "free_y") + 
     geom_vline(aes(xintercept = 1976),
              linetype = "dashed",
-             color = "navy") +
-  
-    geom_vline(aes(xintercept = year),
-             linetype = "dashed",
              color = "red",
-             data = winslet)
-  
+             size =1) + 
+  labs(title = "Charlie's Angels Characters and Actresses", subtitle = "Charlie's Angels premiered in 1976", y = "babies")  
 ```
 
 #Charlie
@@ -458,18 +422,20 @@ babynames %>%
   facet_wrap(~name, scales = "free_y") + 
     geom_vline(aes(xintercept = 1976),
              linetype = "dashed",
-             color = "navy")
+             color = "red",
+             size = 1)
 
 
 babynames %>%
-  filter(name %in% c( "Jill"), sex == "F") %>%
+  filter(name %in% c( "Jill", "Jillian"), sex == "F") %>%
   filter(year>=1950) %>%
   ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  geom_point(mapping = aes( x=year, y = n)) + 
   facet_wrap(~name, scales = "free_y") + 
     geom_vline(aes(xintercept = 1976),
              linetype = "dashed",
-             color = "navy") + 
+             color = "red",
+             size = 1) + 
       labs(title = "Girls Named Jill: Charlie's Angels", subtitle = "Charlie's Angels premiered in 1976", y = "babies")
 
 spellman <- data.frame (
@@ -502,7 +468,8 @@ babynames %>%
   facet_wrap(~name, scales = "free_y") + 
     geom_vline(aes(xintercept = 1976),
              linetype = "dashed",
-             color = "navy")
+             color = "red",
+             size = 1)
 ```
 
 
@@ -805,6 +772,72 @@ ggsave("buffy.png")
 ```
 
 
+
+
+
+
+# # Kramer vs Kramer
+
+# Dustin
+
+```{r}
+hoffman_movies <- data.frame(
+  
+  title = c("1967 \n (The Graduate Released) \n", "1969  \n (Midnight Cowboy Released) \n", "1974 \n (Lenny Released) \n", "1976 \n (All The Presidents Men Released) \n", "1979 \n (Kramer vs. Kramer Released) \n"),
+  year = c(1967, 1969, 1974, 1976, 1979)
+)
+
+babynames %>%
+  filter(name %in% c("Dustin")) %>%
+  filter(year>=1949, sex == "M") %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n)) + 
+  geom_vline(aes(xintercept = year, color = title), linetype = "dashed", data = hoffman_movies, size = 1)
+
+```
+
+
+# Meryl
+
+```{r}
+
+babynames %>%
+  filter(name %in% c("Meryl")) %>%
+  filter(year>=1949) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1979),
+             linetype = "dashed",
+             color = "red")
+
+```
+```{r}
+
+babynames %>%
+  filter(name %in% c("Ted")) %>%
+  filter(year>=1949) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1979),
+             linetype = "dashed",
+             color = "red")
+
+babynames %>%
+  filter(name %in% c("Joanna")) %>%
+  filter(year>=1949) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1979),
+             linetype = "dashed",
+             color = "red")
+
+```
+# # # On further thought, Unlikely to unclude these in the writeup
+
+
 # # Disney
 
 #Princesses
@@ -872,67 +905,6 @@ ggsave("disneyprinces.png")
 
 
 
-# # Kramer vs Kramer
-
-# Dustin
-
-```{r}
-hoffman_movies <- data.frame(
-  
-  title = c("1967 \n (The Graduate Released) \n", "1969  \n (Midnight Cowboy Released) \n", "1976 \n (All The Presidents Men Released) \n", "1979 \n (Kramer vs. Kramer Released) \n"),
-  year = c(1967, 1969, 1976, 1979)
-)
-
-babynames %>%
-  filter(name %in% c("Dustin")) %>%
-  filter(year>=1949, sex == "M") %>%
-  ggplot() +
-  geom_point(mapping = aes( x=year, y = n)) + 
-  geom_vline(aes(xintercept = year, color = title), linetype = "dashed", data = hoffman_movies, size = 1)
-
-```
-
-
-# Meryl
-
-```{r}
-
-babynames %>%
-  filter(name %in% c("Meryl")) %>%
-  filter(year>=1949) %>%
-  ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
-  facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = 1979),
-             linetype = "dashed",
-             color = "red")
-
-```
-```{r}
-
-babynames %>%
-  filter(name %in% c("Ted")) %>%
-  filter(year>=1949) %>%
-  ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
-  facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = 1979),
-             linetype = "dashed",
-             color = "red")
-
-babynames %>%
-  filter(name %in% c("Joanna")) %>%
-  filter(year>=1949) %>%
-  ggplot() +
-  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
-  facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = 1979),
-             linetype = "dashed",
-             color = "red")
-
-```
-# # # On further thought, Unlikely to unclude these in the writeup
-
 
 # # Gossip Girl
 
@@ -998,18 +970,42 @@ babynames %>%
 
 ```{r}
 babynames %>%
-  filter(name %in% c("Luna")) %>%
-  filter(year>=1990) %>%
+  filter(name %in% c("Phoebe")) %>%
+  filter(year>=1980) %>%
   ggplot() +
   geom_point(mapping = aes( x=year, y = n, color = sex)) + 
   facet_wrap(~name, scales = "free_y") + 
-  geom_vline(aes(xintercept = 2003),
+  geom_vline(aes(xintercept = 1994),
+             linetype = "dashed",
+             color = "navy")
+
+babynames %>%
+  filter(name %in% c("Melissa")) %>%
+  filter(year>=1980) %>%
+  ggplot() +
+  geom_point(mapping = aes( x=year, y = n, color = sex)) + 
+  facet_wrap(~name, scales = "free_y") + 
+  geom_vline(aes(xintercept = 1996),
              linetype = "dashed",
              color = "navy")
 
 
 babynames %>% 
   filter(name == "Luna" | name == "Bellatrix", year >=2000, sex == "F")
+
+
+babynames %>% 
+  filter(name == "Darren", year >=1960) #Darren does move up a little bit for girls as well
+
+         
+
+babynames %>% 
+  filter(name == "Tabitha", year >=1960, sex == "F")
+
+babynames %>% 
+  filter(name == "Endora", year >=1960, sex == "F")
+
+
 
 ```
 
